<resources>
    <string name="app_name">SmartBiz</string>

    <!-- Strings related to login -->
    <string name="login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_registration_vk">VK | Войти как %1$s</string>
    <string name="action_registration">Зарегистрироваться</string>
    <string name="action_new_account">Новый акаунт</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email адрес введен некорректно !</string>
    <string name="error_invalid_password">Введенный пароль очень короткий</string>
    <string name="error_invalid_repeat_password">Введенные пароли не совпадают</string>
    <string name="error_incorrect_password">Некорректный пароль</string>
    <string name="error_field_required">Это поле обязательно к заполнению</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <integer name="com_vk_sdk_AppId">5093720</integer>
    <string name="title_activity_register">Регистрация</string>
    <string name="title_activity_main">SmartShop</string>
    <string name="scan_barcode_button">Сканировать штрих-код</string>
    <string name="title_activity_add_product">Добавление продукта</string>
    <string name="title_activity_list_added_products">Добавленные товары</string>
    <string name="content_main_button_new_check">Продать</string>
    <string name="title_activity_purchase">Список продуктов</string>
    <string name="activity_purchase_total">Сумма, руб.</string>
    <string name="activity_purchase_button_submit">Оформить</string>
    <string name="layout_purchase_add_product_edittext_count">Количество</string>
    <string name="layout_purchase_add_product_textview_total">Сумма</string>
    <string name="layout_purchase_add_product_button_add">Добавить</string>
    <string name="activity_check_total">Сумма, руб.</string>
    <string name="activity_check_button_submit">Оплата</string>
    <string name="title_activity_check">Чек</string>
    <string name="title_activity_payment">Оплата</string>
    <string name="textView2">Сумма, руб.</string>
    <string name="activity_payment_textview_total">Place total price here</string>
    <string name="textView4">Оплачено, руб.</string>
    <string name="textView5">Сдача, руб.</string>
    <string name="activity_payment_textview_odd_money">Place odd money here</string>
    <string name="activity_payment_button_pay">Оплатить</string>
    <string name="content_main_button_show_products">Список продуктов</string>
    <string name="add_product">Добавить</string>
    <string name="content_main_button_edit_shop_profile">Редактировать профиль магазина</string>
    <string name="title_activity_shop_profile">Профиль магазина</string>
    <string name="title_activity_edit_product">Информация о продукте</string>
    <string name="content_main_button_supply">Поставка товара</string>
    <string name="activity_supply_button_done">Оформить поставку</string>
    <string name="content_main_button_discarding">Списание</string>
    <string name="activity_discard_button_done">Оформить списание</string>
    <string name="content_main_button_employees">Список сотрудников</string>
    <string name="content_main_button_employee_registration">Зарегистрировать сотрудника</string>

    <string name="host">https://smartshop1.ddns.net</string>
    <string name="authorization_uri">/api/auth/login/</string>
    <string name="registration_uri">/api/auth/registration/</string>
    <string name="change_password_uri">/api/auth/changepassword/</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторите пароль</string>
    <string name="content_main_button_sync">Синхронизировать с сервером</string>
    <string name="scan_product">Сканировать продукт</string>
    <string name="content_main_button_price_update">Список изменений</string>
</resources>
