<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".businessLogic.userIdentification.activities.ChangePasswordActivity"
    android:orientation="horizontal"
    >

    <!-- Change password progress -->
    <ProgressBar android:id="@+id/activity_change_password_progressBar" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone"
        />

    <LinearLayout android:id="@+id/activity_change_password_form" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Смена пароля"
            android:id="@+id/activity_change_password_textView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            />

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <AutoCompleteTextView android:id="@+id/activity_change_password_old_password" android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:hint="@string/old_password"
                                  android:inputType="textPassword" android:maxLines="1"
                                  android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <EditText android:id="@+id/activity_change_password_new_password1" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:hint="@string/new_password"
                      android:imeActionId="@+id/login"
                      android:imeActionLabel="@string/action_sign_in_short"
                      android:imeOptions="actionUnspecified" android:inputType="textPassword"
                      android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <EditText android:id="@+id/activity_change_password_new_password2" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:hint="@string/repeat_new_password"
                      android:imeActionId="@+id/login"
                      android:imeActionLabel="@string/action_sign_in"
                      android:imeOptions="actionUnspecified" android:inputType="textPassword"
                      android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/activity_change_password_change_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Изменить пароль"
                android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
